ResponseEntity -> StatusResponse modelMapper 의존성 주입 제거, new VO 객체를 통해 바로 리턴